<resources>
    <string name="app_name">A4 Sund Forluft</string>
    <string name="titel"><b>SUND</b> FOR<b>LUFT</b></string>
    <string name="navigation_drawer_open">Open Navigation Drawer</string>
    <string name="navigation_drawer_close">Close Navigation Drawer</string>
    <string name="continueasguest">Fortsæt som gæst</string>

    <!-- Navigation Drawer -->
    <string name="menuFavorit">Favoriter</string>
    <string name="menuSchool">Tilføj Favorit</string>
    <string name="menuRanklist">Rangliste</string>
    <string name="menuHelp">Hjælp</string>
    <string name="menuScanner">QR Scanner</string>
    <string name="menuBack">Tilbage</string>

    <!-- Favorit Fragmnet -->
    <string name="favorit">Favorit Skoler</string>
    <string name="favoritButtonText">Gentofte Skole\nLuftkvalitet: God</string>
    <string name="searchHint">Søg</string>
    <!-- used by models/FavoritListviewModel.java -->
    <string name="bad_air_quality">Dårlig (%d ppm)</string>
    <string name="medium_air_quality">Medium (%d ppm)</string>
    <string name="good_air_quality">God (%d ppm)</string>
    <string name="best_air_quality">Fremragende (%d ppm)</string>
    <!-- Detailed View -->


    <!-- Rankliste Fragment -->
    <string name="topSkoler">Top skoler</string>
    <!-- Rankliste Fragments -->
    <string name="copenhagen">Top skoler i København</string>
    <string name="zealand">Top skoler i Sjælland</string>
    <string name="southdenmark">Top skoler i Syddanmark</string>
    <string name="midjutland">Top skoler i Midtjylland</string>
    <string name="northjutland">Top skoler i Nordjylland</string>
    <string name="schoolName">Skole Navn</string>
    <!-- Detailed Fragment -->
    <string name="placeholder">Placeholder Class</string>
    <string name="airQuality">50%</string>
    <!-- Help Fagment -->
    <string name="helpTitel">Hjælp</string>
    <!-- Scanner Fragment -->
    <string name="acceptPermission">You need to accept permission</string>

    <!-- Guest Login -->
    <string name="tekst">. . .</string>

    <!-- Teacher/Admin Login -->
    <string name="login">Login</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="addSchool">Tilføj Skole</string>
    <string name="schoolAdded">Succesfuldt tilføjet skole "</string>
    <string name="schoolAddedRemoved">"</string>
    <string name="allSchools">Oversigt Over Skoler</string>
    <string name="removeSchool">Fjern Skole</string>
    <string name="schoolRemoved">Succesfuldt fjernet skole "</string>
    <string name="welcome">Velkommen</string>
    <string name="welcome2">Velkommen </string>
    <string name="guest">Guest - QR Scanner</string>
    <string name="qrNotFound">Din QR kode er ikke gyldig</string>
    <string name="teacherLogin">Lærer Login</string>

    <string name="gettingSchools">Henter skoler. Vent venligst.</string>
    <string name="fill">Venligst udfyld felterne</string>

    <string name="toastWrongUserPass">Forkert brugernavn/kodeord</string>

    <string name="classroom">Indtast navnet på klasseværelse</string>
    <string name="submit">Tilføj</string>
    <string name="classroomHint">Klasseværelse</string>
    <string name="oversigt_over_skoler">Oversigt Over Skoler</string>
    <string name="co2_limit">Co2 Grænser</string>
    <string name="_450ppm"><![CDATA[<450ppm]]></string>
    <string name="_600ppm"><![CDATA[<600ppm]]></string>
    <string name="_800ppm"><![CDATA[<800ppm]]></string>
    <string name="_1000ppm"><![CDATA[>1000ppm]]></string>
    <string name="cloudDetailedInfo">I denne periode var den største værdi %.2f ppm.\nGennemsnittet var %.2f ppm.\nDen laveste Co2 værdi for perioden var %.2f ppm.</string>
    <string name="wait_data_loaded_from_cloud">Data bliver hentet fra skyen.</string>
    <string name="classroom_avg_load">Henter klasse Co2 gennemsnit fra skyen.</string>
    <string name="invalid_qr_code">Invalid QR code.</string>
    <string name="airquality_avg">Luftkvalitet (Gennemsnit): %.2f ppm</string>
    <string name="developer_str">Udviklere af SundForluft App:\n\nRasmus Søborg (s185119)\nHans Krogh Thomsen (s185110)\nNicklas Beyer Lydersen (S185105)\nBenjamin Fester Henningsen (S124317)\nMathias Skøn Frimann (S163310)</string>
    <string name="forbinder">Forbinder</string>
    <string name="add_school">Tilføj Skole</string>
    <string name="skole">Skole</string>
    <string name="velkommen_admin">Velkommen Admin</string>
    <string name="logout">Log Ud</string>
    <string name="oversigt_over_skyer">Oversigt Over Skyer</string>
    <string name="admin_login">Admin Login</string>
    <string name="velkommen">Velkommen</string>
    <string name="SchoolAveragePlaceholder">Skolen Average Luft Kvalitet</string>
    <string name="removeCloud">Fjern Sky</string>
    <string name="addCloud">Tilføj Sky</string>
    <string name="ppmDetails">Maksimum: %.2f ppm\nGennemsnit: %.2f ppm\nMinimum: %.2f ppm</string>
</resources>
